Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-11602

InnoDB leaks foreign key metadata on DDL operations

    XMLWordPrintable

Details

    Description

      A memory leak was introduced in MDEV-6759 to address a ‘valgrind failure’ which looks like a double free when running ./mtr main.alter_table. Here is a simple test case that will trigger LeakSanitizer when building 10.1 with cmake -DWITH_ASAN=ON:

      --source include/have_innodb.inc
      CREATE TABLE t1 (id INT PRIMARY KEY) ENGINE=INNODB;
      CREATE TABLE t2 (id INT PRIMARY KEY, t1_id INT, FOREIGN KEY (t1_id) REFERENCES t1(id)) ENGINE=INNODB;
      DROP TABLE t2,t1;
      

      With a fix in place, these memory leaks are gone, but there are some others. In 10.1.21, all of --suite=innodb,innodb_fts,innodb_zip,encryption completed fine. So did main.alter_table. Tests for --suite=main are still running.

      I will test 10.0 too to see if a double free in main.alter_table can be observed there.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0.5d
                  0.5d
                  Remaining:
                  Remaining Estimate - 0.5d
                  0.5d
                  Logged:
                  Time Spent - Not Specified
                  Not Specified

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.